<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel"
        android:background="@color/CommonStatusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/girl_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dialogUserInstr"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginTop="@dimen/_20sdp"/>


    </RelativeLayout>

   <LinearLayout
        android:background="@color/white"
       android:layout_width="match_parent"
       android:layout_below="@+id/rel"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:text="@string/dialogInstr1"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:text="@string/dialogInstr2"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialogInstr3"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialogInstr4"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialogInstr5"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialogInstr6"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:textColor="@color/black"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/dialogInstr7"
           android:layout_marginLeft="@dimen/_15sdp"
           android:layout_marginRight="@dimen/_15sdp"
           android:layout_marginTop="@dimen/_10sdp"
           android:textStyle="bold"
           android:fontFamily="serif"
           android:textSize="@dimen/_12ssp"
           android:textColor="@color/black"/>


        <Button
            android:id="@+id/Btnok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogok"
            android:textStyle="bold"
            android:backgroundTint="@color/CommonStatusBar"/>

   </LinearLayout>

</RelativeLayout>