<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Helpline">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/adv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/purple_200"
                >

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:src="@drawable/law"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BasicLaws"
                    android:textSize="@dimen/_18ssp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:fontFamily="serif-monospace"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law1"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="serif"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law1D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law2"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="serif"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law2D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_210sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law3"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law3D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_310sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law4"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="serif"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law4D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law5"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="serif"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law5D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law6"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="serif"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law6D"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>


            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/teal_200"
                app:cardCornerRadius="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law7"
                    android:textSize="@dimen/_13ssp"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="serif"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/law7D"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="10dp"/>
            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>